[package]
name = "locky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version = "0.32.0", features = ["Win32_System_RestartManager", "Win32_Foundation"] }
clap = { version = "3.0.14", features = ["derive"] }
sysinfo = "0.23.2"
rand = "0.8.5"
rayon = "1.5.1"
dunce = "1.0.2"
